--- a/src/app/admin/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/admin/authentication/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <app-card>
-    <app-page-title title></app-page-title>
+    <app-page-title title *ngIf="matchWebBreakpoint$ | async"></app-page-title>
 
     <div>Don't worry! We will send you an email with the instructions to reset your password.</div>
 
