--- a/src/app/admin/summary/summary.component.html
+++ b/src/app/admin/summary/summary.component.html
@@ -1,4 +1,4 @@
 <app-card>
-    <app-page-title title></app-page-title>
+    <app-page-title title *ngIf="matchWebBreakpoint$ | async"></app-page-title>
 
 </app-card>
