--- a/src/app/admin/board/board.component.html
+++ b/src/app/admin/board/board.component.html
@@ -1,5 +1,5 @@
 <app-card>
-    <app-page-title title></app-page-title>
+    <app-page-title title *ngIf="matchWebBreakpoint$ | async"></app-page-title>
 
     <div cdkDropListGroup *ngIf="board; else createBoard" class="board-lists" cdkScrollable>
         <div class="drag-drop-container">
