--- a/src/app/shared/shared-components/contact-card/contact-card/contact-card.component.scss
+++ b/src/app/shared/shared-components/contact-card/contact-card/contact-card.component.scss
@@ -2,6 +2,9 @@
     display: flex;
     align-items: center;
     gap: 35px;
+    @media(max-width: 800px){
+        gap: 12px;
+    }
 }
 
 .text-left{
