--- a/src/theme.scss
+++ b/src/theme.scss
@@ -20,8 +20,7 @@ $my-custom-level: mat.define-typography-level($font-family: Inter,
     $letter-spacing: normal,
   );
 
-$fonts: mat.define-typography-config(
-  $headline-1: mat.define-typography-level($font-size: 112px, $line-height: 112px, $font-weight: 300,  $font-family: Inter, $letter-spacing: -0.05em),
+$fonts: mat.define-typography-config($headline-1: mat.define-typography-level($font-size: 112px, $line-height: 112px, $font-weight: 300, $font-family: Inter, $letter-spacing: -0.05em),
     $headline-2: mat.define-typography-level(56px, 56px, 400, $letter-spacing: -0.02em),
     $headline-3: mat.define-typography-level(45px, 48px, 400, $letter-spacing: -0.005em),
     $headline-4: mat.define-typography-level(34px, 40px, 400),
