--- a/src/app/shared/shared-components/task/task.component.html
+++ b/src/app/shared/shared-components/task/task.component.html
@@ -36,3 +36,5 @@
     </div>
     <img class="priority-icon" src="assets/{{task.priority.toLowerCase()}}.svg" alt="Priority Icon">
 </div>
+
+<ng-content></ng-content>
