--- a/src/app/admin/board/board.component.html
+++ b/src/app/admin/board/board.component.html
@@ -3,19 +3,56 @@
 
     <div cdkDropListGroup *ngIf="board; else createBoard" class="board-lists" cdkScrollable>
         <div class="drag-drop-container">
-            <h2>Backlog</h2>
+            <div class="board-list-header">
+                <h2>Backlog</h2>
+                <button mat-icon-button color="accent" [matMenuTriggerFor]="menu">
+                    <mat-icon>menu</mat-icon>
+                </button>
+                <mat-menu #menu="matMenu">
+                    <button mat-menu-item>Clear Backlog</button>
+                </mat-menu>
+            </div>
 
-            <div cdkDropList [cdkDropListSortingDisabled]="true" [cdkDropListDisabled]="draggingDisabled" [cdkDropListData]="backlog" class="drag-drop-list" (cdkDropListDropped)="drop($event)">
-                <app-task class="drag-drop-box" [cdkDragDisabled]="draggingDisabled" [task]="item" *ngFor="let item of backlog; let i = index" cdkDrag></app-task>
+            <div cdkDropList [cdkDropListSortingDisabled]="true" [cdkDropListData]="backlog" class="drag-drop-list"
+                (cdkDropListDropped)="drop($event)">
+                <app-task class="drag-drop-box" [task]="item" *ngFor="let item of backlog; let i = index" cdkDrag>
+                    <div class="example-handle" cdkDragHandle>
+                        <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
+                            <path
+                                d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
+                            </path>
+                            <path d="M0 0h24v24H0z" fill="none"></path>
+                        </svg>
+                    </div>
+                </app-task>
+
             </div>
         </div>
         <ng-container *ngFor="let list of board.lists;let i = index;">
             <div class="drag-drop-container">
-                <h2>{{list.name}}</h2>
+                <div class="board-list-header">
+                    <h2>{{list.name}}</h2>
+                    <button mat-icon-button color="accent" [matMenuTriggerFor]="menu">
+                        <mat-icon>menu</mat-icon>
+                    </button>
+                    <mat-menu #menu="matMenu">
+                        <button mat-menu-item>Delete List</button>
+                    </mat-menu>
+                </div>
 
-                <div cdkDropList [cdkDropListSortingDisabled]="true" [cdkDropListDisabled]="draggingDisabled" [cdkDropListData]="list.tasks" class="drag-drop-list"
-                    (cdkDropListDropped)="drop($event, list)">
-                    <app-task [cdkDragDisabled]="draggingDisabled" class="drag-drop-box" [task]="item" *ngFor="let item of list.tasks; let i = index" cdkDrag></app-task>
+                <div cdkDropList [cdkDropListSortingDisabled]="true" [cdkDropListData]="list.tasks"
+                    class="drag-drop-list" (cdkDropListDropped)="drop($event, list)">
+                    <app-task class="drag-drop-box" [task]="item" *ngFor="let item of list.tasks; let i = index"
+                        cdkDrag>
+                        <div class="example-handle" cdkDragHandle>
+                            <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
+                                <path
+                                    d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
+                                </path>
+                                <path d="M0 0h24v24H0z" fill="none"></path>
+                            </svg>
+                        </div>
+                    </app-task>
                 </div>
             </div>
         </ng-container>
