--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,6 +42,8 @@ body {
     display: block;
     flex: 1;
     overflow-y: auto;
+
+    position: relative;
 }
 
 .drag-drop-box {
@@ -53,7 +55,6 @@ body {
     align-items: center;
     justify-content: space-between;
     box-sizing: border-box;
-    cursor: move;
     background: white;
     font-size: 14px;
 }
