declare types TaskMode and PriorityType

--- a/src/app/admin/add-task/add-task.component.html
+++ b/src/app/admin/add-task/add-task.component.html
@@ -56,7 +56,7 @@
 
     <div *ngIf="!hideFooter" class="footer" footer>
         <div class="simple-grid">
-            <button (click)="addTaskForm.reset()" mat-stroked-button color="primary">Clear</button>
+            <button (click)="addTaskForm.reset(InitTask)" mat-stroked-button color="primary">Clear</button>
             <button [disabled]="addTaskForm.invalid" (click)="saveTask()" mat-raised-button color="primary">
                 <span *ngIf="mode == 'add'">Create Task</span>
                 <span *ngIf="mode == 'edit'">Save Task</span>
