fix add category dialog close on cancel

--- a/src/app/shared/shared-components/dialogs/add-contact/add-contact.component.html
+++ b/src/app/shared/shared-components/dialogs/add-contact/add-contact.component.html
@@ -8,15 +8,13 @@
             [control]="$any(addContactForm.get('name'))" [labelName]="'Name'"></app-form-field>
 
         <app-form-field [errors]="[{name: 'required', htmlMessage: 'Email is <strong>required</strong>'},
-            {name: 'email', htmlMessage: 'Please enter a valid email address'}]"
-            [autocomplete]="'contact-email'" [type]="'email'" [inputType]="'input'"
-            [suffixPath]="'assets/mail.svg'" [control]="$any(addContactForm.get('email'))"
-            [labelName]="'Email'"></app-form-field>
+            {name: 'email', htmlMessage: 'Please enter a valid email address'}]" [autocomplete]="'contact-email'"
+            [type]="'email'" [inputType]="'input'" [suffixPath]="'assets/mail.svg'"
+            [control]="$any(addContactForm.get('email'))" [labelName]="'Email'"></app-form-field>
 
         <app-form-field [errors]="[{name: 'required', htmlMessage: 'Phone Number is <strong>required</strong>'}]"
-            [autocomplete]="'contact-phone'" [type]="'tel'" [inputType]="'input'"
-            [suffixPath]="'assets/phone.svg'" [control]="$any(addContactForm.get('phoneNumber'))"
-            [labelName]="'Phone'"></app-form-field>
+            [autocomplete]="'contact-phone'" [type]="'tel'" [inputType]="'input'" [suffixPath]="'assets/phone.svg'"
+            [control]="$any(addContactForm.get('phoneNumber'))" [labelName]="'Phone'"></app-form-field>
 
         <!-- <mat-expansion-panel>
             <mat-expansion-panel-header>
@@ -32,6 +30,7 @@
 
     <ng-container actions>
         <button mat-dialog-close mat-stroked-button color="primary">Cancel</button>
-        <button (click)="addContact()" [disabled]="addContactForm.invalid" mat-raised-button color="primary">Create Contact</button>
+        <button (click)="addContact()" [disabled]="addContactForm.invalid" mat-raised-button color="primary">Create
+            Contact</button>
     </ng-container>
 </app-dialog>
