--- a/src/app/shared/shared-components/dialogs/add-task-dialog/add-task-dialog.component.html
+++ b/src/app/shared/shared-components/dialogs/add-task-dialog/add-task-dialog.component.html
@@ -1,13 +1,15 @@
 <app-dialog [title]="title">
     <ng-container side></ng-container>
 
-    <app-add-task (formStatus$)="updateFormStatus($event)" [showPageTitle]="false" [clearTaskForm$]="clearTaskForm" [submitTaskForm$]="submitTaskForm"
-        [hideFooter]="true" [mode]="mode" [task]="task"></app-add-task>
+    <app-add-task [predefinedTaskRequest]="predefinedTaskRequest" (formStatus$)="updateFormStatus($event)"
+        [showPageTitle]="false" [clearTaskForm$]="clearTaskForm" [submitTaskForm$]="submitTaskForm" [hideFooter]="true"
+        [mode]="mode" [task]="task"></app-add-task>
 
     <div class="footer" actions>
         <div class="simple-grid">
             <button (click)="clearTaskForm.emit()" mat-stroked-button color="primary">Clear</button>
-            <button [disabled]="formStatus && formStatus !== 'VALID'" (click)="submitTaskForm.emit()" mat-raised-button color="primary">
+            <button [disabled]="formStatus && formStatus !== 'VALID'" (click)="submitTaskForm.emit()" mat-raised-button
+                color="primary">
                 <span *ngIf="mode == 'add'">Create Task</span>
                 <span *ngIf="mode == 'edit'">Save Task</span>
             </button>
