--- a/src/app/shared/shared-components/form-field/form-field.component.html
+++ b/src/app/shared/shared-components/form-field/form-field.component.html
@@ -16,11 +16,20 @@
         </mat-option>
     </mat-select>
 
+    <div class="input-color" *ngIf="inputType == 'color'">
+        <input (focus)="resetErrorState()" [autocomplete]="autocomplete" [required]="required" matInput
+            [ngxMatColorPicker]="picker" [formControl]="$any(control)" [disabled]="false"
+            [errorStateMatcher]="customMatcher">
+        <ngx-mat-color-toggle matSuffix [for]="picker"></ngx-mat-color-toggle>
+        <ngx-mat-color-picker #picker [touchUi]="false" [color]="control.value"></ngx-mat-color-picker>
+    </div>
+
 
     <input *ngIf="inputType == 'date'" [formControl]="$any(control)" [errorStateMatcher]="customMatcher"
         (focus)="resetErrorState()" [autocomplete]="autocomplete" [required]="required" matInput
         [matDatepicker]="picker">
-    <mat-datepicker-toggle (click)="resetErrorState()" *ngIf="inputType == 'date'" matIconSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker-toggle (click)="resetErrorState()" *ngIf="inputType == 'date'" matIconSuffix
+        [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker [hidden]="inputType != 'date'" #picker></mat-datepicker>
 
 
