--- a/src/app/shared/shared-components/form-field/form-field.component.scss
+++ b/src/app/shared/shared-components/form-field/form-field.component.scss
@@ -3,3 +3,8 @@ mat-form-field {
     // max-width: 100%;
     // width: 422px;
 }
+
+.input-color{
+    display: flex;
+    justify-content: space-between;
+}
