--- a/src/app/admin/authentication/authentication.component.html
+++ b/src/app/admin/authentication/authentication.component.html
@@ -1,19 +1,7 @@
 <div class="header">
     <app-logo [light]="true"></app-logo>
-    <div *ngIf="!(mobile$ | async)" class="to-register">
-        <span class="mdc-form-field">Not a Join user?</span>
-        <ng-container *ngIf="signUpRoute">
-            <app-router-link [route]="signUpRoute"></app-router-link>
-        </ng-container>
-    </div>
+    <app-to-sign-up *ngIf="!(mobile$ | async)"></app-to-sign-up>
 </div>
-
 
 <router-outlet></router-outlet>
-
-<div *ngIf="mobile$ | async" class="to-register">
-    <span class="mdc-form-field">Not a Join user?</span>
-    <ng-container *ngIf="signUpRoute">
-        <app-router-link [route]="signUpRoute"></app-router-link>
-    </ng-container>
-</div>
+<app-to-sign-up *ngIf="(mobile$ | async)"></app-to-sign-up>
