--- a/src/app/admin/authentication/reset-password/reset-password.component.html
+++ b/src/app/admin/authentication/reset-password/reset-password.component.html
@@ -1,5 +1,7 @@
 <app-card>
-    <app-page-title title ></app-page-title>
+    <app-page-title title >
+        <app-to-login before></app-to-login>
+    </app-page-title>
 
     <form class="main-content" [formGroup]="resetPasswordForm">
 
