--- a/src/app/admin/authentication/forgot-password/forgot-password.component.html
+++ b/src/app/admin/authentication/forgot-password/forgot-password.component.html
@@ -1,5 +1,5 @@
 <app-card>
-    <app-page-title title >
+    <app-page-title title>
         <app-to-login before></app-to-login>
     </app-page-title>
 
@@ -18,6 +18,8 @@
         <div class="simple-grid">
             <button [disabled]="forgotPasswordForm.invalid" (click)="sendMail()" mat-raised-button color="primary">Send
                 mail</button>
+
+            <app-logo *ngIf="mobile$ | async" after [light]="true"></app-logo>
         </div>
 
     </div>
