--- a/src/app/admin/authentication/forgot-password/forgot-password.component.scss
+++ b/src/app/admin/authentication/forgot-password/forgot-password.component.scss
@@ -12,15 +12,17 @@
     display: grid;
     grid-gap: 35px;
     padding: 16px;
+    width: 100%;
+    box-sizing: border-box;
 
     .simple-grid {
         display: flex;
-        gap: 35px;
-        flex-wrap: wrap;
+        justify-content: space-between;
 
         button,
         a {
             width: fit-content;
+            margin-top: auto;
         }
     }
 }
