--- a/src/app/admin/authentication/authentication.component.scss
+++ b/src/app/admin/authentication/authentication.component.scss
@@ -5,9 +5,9 @@
     align-items: center;
     width: 100%;
     height: 100%;
-
+    box-sizing: border-box;
     gap: 35px;
-
+    overflow-y: auto;
     padding: 1rem 0;
 
     .header{
