--- a/src/app/shared/shared-components/page-title/page-title.component.scss
+++ b/src/app/shared/shared-components/page-title/page-title.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    font-size: 30px;
     gap: 16px;
+    padding: 1rem 0;
 }
