--- a/src/app/admin/board/board.component.html
+++ b/src/app/admin/board/board.component.html
@@ -13,19 +13,26 @@
                 </mat-menu>
             </div>
 
-            <div cdkDropList [cdkDropListSortingDisabled]="true" [cdkDropListData]="backlog" class="drag-drop-list"
+            <div [style.background]="backlog && backlog.length ? '#E7E7E7' : 'white'" cdkDropList [cdkDropListSortingDisabled]="true" [cdkDropListData]="backlog" class="drag-drop-list"
                 (cdkDropListDropped)="drop($event)">
-                <app-task (task)="handleEditedTask($any($event))" class="drag-drop-box" [task]="item" *ngFor="let item of backlog; let i = index" cdkDrag>
-                    <div class="example-handle" cdkDragHandle>
-                        <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
-                            <path
-                                d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
-                            </path>
-                            <path d="M0 0h24v24H0z" fill="none"></path>
-                        </svg>
-                    </div>
-                </app-task>
 
+                <ng-container *ngIf="backlog && backlog.length; else noTasks">
+                    <app-task (task)="handleEditedTask($any($event))" class="drag-drop-box" [task]="item"
+                        *ngFor="let item of backlog; let i = index" cdkDrag>
+                        <div class="example-handle" cdkDragHandle>
+                            <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
+                                <path
+                                    d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
+                                </path>
+                                <path d="M0 0h24v24H0z" fill="none"></path>
+                            </svg>
+                        </div>
+                    </app-task>
+                </ng-container>
+
+                <ng-template #noTasks>
+                    <div class="no-tasks">No tasks in Backlog</div>
+                </ng-template>
             </div>
         </div>
         <ng-container *ngFor="let list of board.lists;let i = index;">
@@ -40,19 +47,26 @@
                     </mat-menu>
                 </div>
 
-                <div cdkDropList [cdkDropListSortingDisabled]="true" [cdkDropListData]="list.tasks"
+                <div [style.background]="list.tasks && list.tasks.length ? '#E7E7E7' : 'white'" cdkDropList [cdkDropListSortingDisabled]="true" [cdkDropListData]="list.tasks"
                     class="drag-drop-list" (cdkDropListDropped)="drop($event, list)">
-                    <app-task (task)="handleEditedTask($any($event))" class="drag-drop-box" [task]="item" *ngFor="let item of list.tasks; let i = index"
-                        cdkDrag>
-                        <div class="example-handle" cdkDragHandle>
-                            <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
-                                <path
-                                    d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
-                                </path>
-                                <path d="M0 0h24v24H0z" fill="none"></path>
-                            </svg>
-                        </div>
-                    </app-task>
+
+                    <ng-container *ngIf="list.tasks && list.tasks.length; else noTasks">
+                        <app-task (task)="handleEditedTask($any($event))" class="drag-drop-box" [task]="item"
+                            *ngFor="let item of list.tasks; let i = index" cdkDrag>
+                            <div class="example-handle" cdkDragHandle>
+                                <svg width="24px" fill="currentColor" viewBox="0 0 24 24">
+                                    <path
+                                        d="M10 9h4V6h3l-5-5-5 5h3v3zm-1 1H6V7l-5 5 5 5v-3h3v-4zm14 2l-5-5v3h-3v4h3v3l5-5zm-9 3h-4v3H7l5 5 5-5h-3v-3z">
+                                    </path>
+                                    <path d="M0 0h24v24H0z" fill="none"></path>
+                                </svg>
+                            </div>
+                        </app-task>
+                    </ng-container>
+
+                    <ng-template #noTasks>
+                        <div class="no-tasks">No tasks {{ list.name.toLowerCase().includes('in') ? '': 'in'}} {{list.name}} List</div>
+                    </ng-template>
                 </div>
             </div>
         </ng-container>
