--- a/src/app/admin/board/board.component.scss
+++ b/src/app/admin/board/board.component.scss
@@ -45,3 +45,23 @@
     width: 24px;
     height: 24px;
 }
+
+.no-tasks {
+    width: 100%;
+    min-height: 60px;
+    display: flex;
+    align-items: center;
+    // box-sizing: border-box;
+    // margin: 6px;
+    justify-content: center;
+    border: 1px dashed var(--icon, #A8A8A8);
+    background: #E7E7E7;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.16);
+    color: var(--icon, #A8A8A8);
+    /* Version 2/body */
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%;
+    /* 19.2px */
+}
