--- a/src/app/admin/contacts/contacts.component.html
+++ b/src/app/admin/contacts/contacts.component.html
@@ -27,7 +27,7 @@
     <button class="close-selected-contact" mat-icon-button (click)="closeSelectedContact()">
         <mat-icon>close</mat-icon>
     </button>
-    <app-page-title *ngIf="matchWebBreakpoint$ | async" title></app-page-title>
+    <!-- <app-page-title *ngIf="matchWebBreakpoint$ | async" title></app-page-title> -->
 
     <app-contact-details (contactChange)="updateContacts()" [contact]="selectedContact"></app-contact-details>
 
