--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,3 +13,9 @@
         }
     }
 }
+
+.opener {
+    position: absolute;
+    transform: translateY(-50%) translateX(-50%);
+    cursor: pointer;
+}
