--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,16 +1,21 @@
-<div style="display: flex; align-items: center; gap: 12px;">
-    <button (click)="toggleDrawer.emit()" mat-icon-button color="accent">
-        <mat-icon>menu</mat-icon>
+<div [style.display]="toggleHeaderView == 'closed' ? 'none' : 'flex'" class="header">
+    <!-- TODO: For the header to hide with the toggle function the header must get display: none toggle -->
+    <div style="display: flex; align-items: center; gap: 12px;">
+        <button (click)="toggleDrawer.emit()" mat-icon-button color="accent">
+            <mat-icon>menu</mat-icon>
+        </button>
+
+        <app-page-title class="mat-mdc-card-title"></app-page-title>
+    </div>
+    <button *ngIf="matchWebBreakpoint$ | async; else iconLogout" mat-raised-button color="primary" (click)="logout()">
+        Log Out
     </button>
 
-    <app-page-title class="mat-mdc-card-title" *ngIf="!(matchWebBreakpoint$ | async)"></app-page-title>
+    <ng-template #iconLogout>
+        <button mat-icon-button color="primary" (click)="logout()">
+            <mat-icon>logout</mat-icon>
+        </button>
+    </ng-template>
 </div>
-<button *ngIf="matchWebBreakpoint$ | async; else iconLogout" mat-raised-button color="primary" (click)="logout()">
-    Log Out
-</button>
 
-<ng-template #iconLogout>
-    <button mat-icon-button color="primary" (click)="logout()">
-        <mat-icon>logout</mat-icon>
-    </button>
-</ng-template>
+<ng-content select="[animation]"></ng-content>
