--- a/src/app/shared/shared-components/contact-initials/contact-initials.component.html
+++ b/src/app/shared/shared-components/contact-initials/contact-initials.component.html
@@ -1,3 +1,4 @@
 <ng-container *ngIf="contactName">
-    {{contactName.substr(substrBegin, substrEnd)}}
+    <!-- {{contactName.substr(substrBegin, substrEnd)}} -->
+    {{contactInitials}}
 </ng-container>
