--- a/src/app/shared/shared-components/contact-initials/contact-initials.component.scss
+++ b/src/app/shared/shared-components/contact-initials/contact-initials.component.scss
@@ -3,7 +3,7 @@
     border-radius: 45px;
     width: 42px;
     height: 42px;
-
+    font-size: 1rem;
     display: flex;
     flex-direction: row;
     justify-content: center;
