adjust textarea on focus and blur

--- a/src/app/shared/shared-components/form-field/form-field.component.html
+++ b/src/app/shared/shared-components/form-field/form-field.component.html
@@ -9,7 +9,7 @@
         minlength="{{minLength || 0}}" (focus)="resetErrorState()" [autocomplete]="autocomplete"
         [attr.type]="type || 'text'" matInput [formControl]="$any(control)" [errorStateMatcher]="customMatcher">
 
-    <textarea (keyup)="autoGrowTextZone($event)" *ngIf="inputType == 'text-area'" [required]="required" maxlength="500"
+    <textarea (blur)="$any($event.target).style.height = '100px'" (focus)="$any($event.target).style.height = '300px'" (input)="autoGrowTextZone($event)" *ngIf="inputType == 'text-area'" [required]="required" maxlength="500"
         minlength="{{minLength || 0}}" (focus)="resetErrorState()" [autocomplete]="autocomplete"
         [attr.type]="type || 'text'" matInput [formControl]="$any(control)"
         [errorStateMatcher]="customMatcher"></textarea>
