fix task view assigness responsiv

--- a/src/app/shared/shared-components/task/task.component.html
+++ b/src/app/shared/shared-components/task/task.component.html
@@ -30,8 +30,8 @@
         <ng-container *ngFor="let assignee of task.assignees; let i = index;">
             <ng-container *ngIf="task.assignees.length > 3; else second">
                 <app-contact-initials *ngIf="i < 2" [contactName]="assignee.name"></app-contact-initials>
-                <app-contact-initials *ngIf="i == 3" [substrEnd]="2"
-                    [contactName]="'+'+(task.assignees.length - 2).toFixed()"></app-contact-initials>
+                <app-contact-initials *ngIf="i == 3"
+                    [contactName]="'+ '+(task.assignees.length - 2).toFixed()"></app-contact-initials>
             </ng-container>
             <ng-template #second>
                 <app-contact-initials [contactName]="assignee.name"></app-contact-initials>
